# grimware

./: .gitignore  .justfile-summary.txt  CLAUDE.md  Cargo.toml  QUICK_REFERENCE.md  README.md  justfile  package.json  vite.config.js
.bacon/: bacon.toml
.claude/: project.json  settings.local.json
.gemini/: project.json
bevy-mcp-ratatui-ref/: .gitignore  ARCHITECTURE_SUMMARY.md  CLAUDE.md  architecture.md  config.rs  main.rs  plugin.rs  tui_basic.rs  tui_brp.rs  usage-examples.md
bevy-mcp-ratatui-ref/src/systems/: mod.rs
bevy-mcp-ratatui-ref/src/tui/: config.rs  mod.rs
bevy-mcp-ref/: CLAUDE.md  README.md  justfile
bevy-mcp-ref/examples/: basic_scene.rs
bevy-mcp-ref/src/: main.rs
bevy-wasm-fsharp-ref/: .gitignore  CLAUDE.md  CLAUDE_NOTES.md  Cargo.toml  README.md  justfile
bevy-wasm-fsharp-ref/.cargo/: config.toml
bevy-wasm-fsharp-ref/.github/workflows/: bevy-wasm-fsharp-ci.yml
bevy-wasm-fsharp-ref/crates/app/: Cargo.toml
bevy-wasm-fsharp-ref/crates/app/src/: cooldown_system.rs  lib.rs  main.rs
bevy-wasm-fsharp-ref/crates/app/tests/: INTEGRATION_TESTS.md  combat_system_test.rs  integration_tests.rs
bevy-wasm-fsharp-ref/crates/logic-fsharp/: Cargo.toml  TEST_COVERAGE_REPORT.md
bevy-wasm-fsharp-ref/crates/logic-fsharp/src/: lib.rs
bevy-wasm-fsharp-ref/crates/logic-fsharp/tests/: ability_cooldown_tests.rs  combat_tests.rs
bevy-wasm-fsharp-ref/docs/: ABILITY_SYSTEM_README.md  ISSUE-14-COMPLETION.md  VISUAL_FEEDBACK_SUMMARY.md  VISUAL_IMPLEMENTATION_SUMMARY.md  WASM_BUILD_SETUP.md  WASM_OPTIMIZATION_SUMMARY.md  ability-system-completion-report.md  ability-system-implementation.md  api-documentation.md  architecture.md  combat-system.md  fsharp-integration.md  fsharp-rust-type-mapping.md  github-issue-10-update.md  issue-10-implementation-summary.md  issue-8-completion.md  performance-report.md  quick-reference-wasm-optimization.md  visual-feedback.md  visual-rendering.md  wasm-optimization.md
bevy-wasm-fsharp-ref/docs/tutorial/: 01-getting-started.md  02-understanding-fsharp.md  03-domain-modeling.md  04-rust-implementation.md  05-bevy-integration.md  06-combat-system.md  07-wasm-deployment.md  08-advanced-topics.md  README.md  troubleshooting.md
bevy-wasm-fsharp-ref/examples/: ai_behavior.rs  custom_abilities.rs  fsharp_integration.rs  headless_simulation.rs  minimal_combat.rs
bevy-wasm-fsharp-ref/fsharp/: Domain.fs  GameLogic.fs
bevy-wasm-fsharp-ref/scripts/: verify-fsharp-rust-alignment.sh
bevy-wasm-fsharp-ref/web/: index.html  wasm-bindgen.sh
docs/: AUTOMATION.md  BRP_MCP_GUIDE.md  DEVELOPMENT.md  EXAMPLES.md  PHASE1_STATUS.md  PLATFORMS.md  QUICK_START.md  ROADMAP.md  bevy-mcp-ratatui.md  bevy-mcp.md  bevy-wasm-fsharp.md  custom-brp-methods.md  getting-started.md  implementation-plan.md  mcp-integration.md  platforms.md  research.md  tauri.md  webatui.md
docs/design/: state-management.md  visual-designs.md
examples/: brp_demo.rs  interactive.rs  tui_basic.rs  tui_brp.rs  windowed_tui.rs
scripts/: deploy.nu
src/: index.html  lib.rs  main.rs  state.rs
src-tauri/src/: lib.rs  main.rs
src/brp/: mod.rs  tools.rs
src/screens/: mod.rs
src/systems/: demo.rs
src/tui/: plugin.rs
tauri-ref/: .gitignore  CLAUDE.md  README.md  SETUP_STATUS.md  index.html  package-lock.json
tauri-ref/docs/: ANDROID_DEVICE.md  ARCHITECTURE.md  SETUP.md
tauri-ref/src/: main.js  style.css
tauri-ref/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ref/src-tauri/capabilities/: default.json
tauri-ref/src-tauri/icons/: icon.icns
tauri-ref/src-tauri/src/: commands.rs  lib.rs  main.rs  mobile.rs
tests/: integration_test.rs
webatui-ref/: .gitignore  Cargo.toml  EXAMPLES.md  justfile
webatui-ref/docs/: APPLE_SILICON_SETUP.md  ARCHITECTURE_SUMMARY.md  QUICK_START.md  STRUCTURE.md  WASM_TESTING_SETUP.md  architecture.md  research.md
webatui-ref/docs/design/: component-specs.md
webatui-ref/examples/: README.md  basic.rs  dashboard.rs  web_demo.rs
webatui-ref/scripts/: README.md  build.nu  clean.nu  serve.nu  test.nu
webatui-ref/src/: app.rs  lib.rs
webatui-ref/src/components/: chart.rs  counter.rs  footer.rs  gauge.rs  header.rs  list.rs  menu.rs  metrics_state.rs  mod.rs
webatui-ref/src/screens/: dashboard.rs  home.rs  interactive.rs  settings.rs
webatui-ref/tests/: integration_test.rs  wasm_tests.rs
