[package]
name = "webatui-ref"
version = "0.1.0"
edition = "2021"
authors = ["Raibid Labs"]
description = "Reference implementation for webatui - terminal UI that works in both terminal and browser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raibid-labs/webatui-ref"
keywords = ["tui", "terminal", "wasm", "ratatui", "yew"]
categories = ["command-line-interface", "web-programming", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Terminal UI dependencies (only used on native, not WASM)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Web/WASM support
yew = { version = "0.21", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

# Async runtime (for both native and WASM)
tokio = { version = "1.42", features = ["sync", "macros"], default-features = false }
wasm-bindgen-futures = { version = "0.4", optional = true }

# State management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# For native tests only - exclude networking features to support WASM tests
tokio = { version = "1.42", features = ["sync", "macros", "rt", "time", "test-util"], default-features = false }
tokio-test = "0.4"
wasm-bindgen-test = "0.3"

[features]
default = []
terminal = ["dep:ratatui", "dep:crossterm"]
web = ["dep:yew", "dep:wasm-bindgen", "dep:web-sys", "dep:wasm-bindgen-futures", "dep:console_error_panic_hook", "dep:wasm-logger"]
examples = ["terminal"]

# Example configurations
[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = []

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
required-features = []

[[example]]
name = "interactive"
path = "examples/interactive.rs"
required-features = []

[[example]]
name = "web_demo"
path = "examples/web_demo.rs"
required-features = ["web"]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.wasm-bindgen]
opt-level = "z"

# WASM optimization
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
