[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Examples - educational code samples demonstrating key concepts
# Run with: cargo run -p app --example <name>
[[example]]
name = "minimal_combat"
path = "../../examples/minimal_combat.rs"

[[example]]
name = "custom_abilities"
path = "../../examples/custom_abilities.rs"

[[example]]
name = "ai_behavior"
path = "../../examples/ai_behavior.rs"

[[example]]
name = "fsharp_integration"
path = "../../examples/fsharp_integration.rs"

[[example]]
name = "headless_simulation"
path = "../../examples/headless_simulation.rs"

[dependencies]
bevy = { version = "0.15", default-features = true }
bevy-wasm-fsharp-ref-logic = { path = "../logic-fsharp" }

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "webgl2",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
